clusters/main/kubernetes/system/registry/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  annotations:
    volsync.backube/privileged-movers: "true"
  labels:
    app.kubernetes.io/name: registry
    goldilocks.fairwinds.com/enabled: "true"
