clusters/main/kubernetes/system/registry/app/authentik-outpost-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
  namespace: registry
spec:
  type: ExternalName
  externalName: authentik-http.authentik.svc.cluster.local
  ports:
    - name: http
      port: 10230
      targetPort: 10230
