clusters/main/kubernetes/system/registry/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: registry
  labels:
    app: docker-registry
spec:
  type: ClusterIP
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-lb
  namespace: registry
  labels:
    app: docker-registry
    registry-role: lb
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
  loadBalancerIP: ${REGISTRY_IP}
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-nodeport
  namespace: registry
  labels:
    app: docker-registry
spec:
  type: NodePort
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
      nodePort: 30020
      protocol: TCP
  selector:
    app: docker-registry
