clusters/main/kubernetes/system/registry/app/gateway-api-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-registry
  namespace: registry
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - registry.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: authentik-outpost
          port: 10230
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docker-registry
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-registry-http-redirect
  namespace: registry
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
  hostnames:
    - registry.${DOMAIN_0}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
